--- a/script-opts/modernz.conf
+++ b/script-opts/modernz.conf
@@ -17,7 +17,7 @@ showfullscreen=yes
 # show OSC when paused
 showonpause=yes
 # disable OSC hide timeout when paused
-keeponpause=yes
+keeponpause=no
 # disable Santa hat in December
 greenandgrumpy=no
 
@@ -96,7 +96,7 @@ window_title=${media-title}
 # window title font size
 window_title_font_size=26
 # show window controls (close, minimize, maximize) in borderless/fullscreen
-window_controls=yes
+window_controls=no
 
 # Subtitle display settings
 # raise subtitles above the OSC when shown
@@ -118,7 +118,7 @@ jump_mode=relative
 # enable continuous jumping when holding down seek buttons
 jump_softrepeat=yes
 # show the chapter skip backward and forward buttons
-chapter_skip_buttons=no
+chapter_skip_buttons=yes
 # enable continuous skipping when holding down chapter skip buttons
 chapter_softrepeat=yes
 # show next/previous playlist track buttons
@@ -133,7 +133,7 @@ playlist_button=yes
 # hide playlist button when no playlist exists
 hide_empty_playlist_button=no
 # gray out the playlist button when no playlist exists
-gray_empty_playlist_button=no
+gray_empty_playlist_button=yes
 
 # show download button on web videos (requires yt-dlp and ffmpeg)
 download_button=yes
