feat: update modernz.lua

--- a/script-opts/modernz.conf
+++ b/script-opts/modernz.conf
@@ -1,6 +1,8 @@
 # Language and display
 # set language (for available options, see: https://github.com/Samillion/ModernZ/blob/main/docs/TRANSLATIONS.md)
 language=en
+# set layout: "modern" or "modern-compact"
+layout=modern-compact
 # set icon theme. accepts fluent or material
 icon_theme=fluent
 # font for the OSC (default: mpv-osd-symbols or the one set in mpv.conf)
@@ -105,6 +107,10 @@ raise_subtitles=yes
 raise_subtitle_amount=125
 
 # Buttons display and functionality
+# show the subtitles menu button
+subtitles_button=yes
+# show the audio tracks menu button
+audio_tracks_button=yes
 # show the jump backward and forward buttons
 jump_buttons=yes
 # change the jump amount in seconds
@@ -133,7 +139,7 @@ playlist_button=yes
 # hide playlist button when no playlist exists
 hide_empty_playlist_button=no
 # gray out the playlist button when no playlist exists
-gray_empty_playlist_button=yes
+gray_empty_playlist_button=no
 
 # show download button on web videos (requires yt-dlp and ffmpeg)
 download_button=yes
@@ -144,7 +150,7 @@ screenshot_button=no
 
 # show window on top button
 ontop_button=yes
-# show loop button
+# show file loop button
 loop_button=no
 # show shuffle button
 shuffle_button=no
@@ -159,7 +165,7 @@ info_button=yes
 # show fullscreen toggle button
 fullscreen_button=yes
 
-# enable looping by right-clicking pause
+# enable loop with mouse actions on pause button
 loop_in_pause=yes
 
 # force buttons to always be active. can add: playlist_prev,playlist_next
@@ -267,8 +273,8 @@ seekrangealpha=150
 livemarkers=yes
 # use keyframes when dragging the seekbar
 seekbarkeyframes=no
-# radius of the seekbar slider (0 to disable rounded corners)
-slider_radius = 2
+# rounded corners seekbar slider
+slider_rounded_corners=yes
 
 # top chapter nibbles above seekbar
 nibbles_top=yes
@@ -276,6 +282,10 @@ nibbles_top=yes
 nibbles_bottom=yes
 # chapter nibble style. "triangle", "bar" or "single-bar"
 nibbles_style=triangle
+# color of chapter nibbles on the seekbar
+nibble_color=#FB8C00
+# color of the current chapter nibble on the seekbar
+nibble_current_color=#FFFFFF
 
 # automatically set keyframes for the seekbar based on video length
 automatickeyframemode=yes
@@ -338,8 +348,8 @@ title_mbtn_mid_command=show-text ${path}
 title_mbtn_right_command=script-binding select/select-watch-history; script-message-to modernz osc-hide
 
 # playlist button mouse actions
-playlist_mbtn_left_command=script-binding select/menu; script-message-to modernz osc-hide
-playlist_mbtn_right_command=script-binding select/select-playlist; script-message-to modernz osc-hide
+playlist_mbtn_left_command=script-binding select/select-playlist; script-message-to modernz osc-hide
+playlist_mbtn_right_command=script-binding select/menu; script-message-to modernz osc-hide
 
 # volume mouse actions
 vol_ctrl_mbtn_left_command=no-osd cycle mute
